--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,142 @@
-Flask==2.0.1
-requests==2.26.0
-openai==0.28.0
-werkzeug==2.0.1
-gunicorn==20.1.0
-Flask-SQLAlchemy==2.5.1
-pylti==2.0.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+annotated-types==0.7.0
+anyio==4.6.0
+astroid==3.3.6
+async-timeout==4.0.3
+attrs==24.2.0
+beautifulsoup4==4.12.3
+black==24.10.0
+blinker==1.8.2
+bs4==0.0.2
+CacheControl==0.14.1
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==43.0.1
+dataclasses-json==0.6.7
+dill==0.3.9
+distro==1.9.0
+exceptiongroup==1.2.2
+faiss-cpu==1.8.0.post1
+filelock==3.16.1
+filetype==1.2.0
+firebase-admin==6.6.0
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.5.0
+fsspec==2024.9.0
+future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+gcloud==0.18.3
+git-filter-repo==2.45.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.24.0
+google-api-python-client==2.155.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-generativeai==0.8.3
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.25.1
+idna==3.10
+importlib_metadata==8.5.0
+isort==5.13.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jwcrypto==1.5.6
+langchain==0.3.13
+langchain-community==0.3.13
+langchain-core==0.3.28
+langchain-google-genai==2.0.7
+langchain-text-splitters==0.3.4
+langsmith==0.2.6
+macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+Markdown==3.7
+MarkupSafe==2.1.5
+marshmallow==3.23.2
+mccabe==0.7.0
+mistune==3.1.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==3.2.1
+nltk==3.9.1
+numpy==1.26.4
+oauth2client==4.1.3
+openai==1.58.1
+orjson==3.10.12
+packaging==24.1
+pathspec==0.12.1
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pillow==10.4.0
+platformdirs==4.3.6
+propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.29.1
+psutil==6.1.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.9.2
+pydantic-settings==2.7.0
+pydantic_core==2.23.4
+PyJWT==2.10.1
+pylint==3.3.2
+PyMuPDF==1.24.11
+pyparsing==3.2.0
+PyPDF2==3.0.1
+pypdfium2==4.30.0
+Pyrebase4==4.8.0
+python-dotenv==1.0.1
+python-jwt==4.1.0
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==0.10.1
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.13.1
+sentence-transformers==3.1.1
+six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.35
+sympy==1.13.3
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tokenizers==0.20.0
+tomli==2.2.1
+tomlkit==0.13.2
+torch==2.4.1
+tqdm==4.66.5
+transformers==4.46.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==1.26.15
+Werkzeug==3.0.4
+yarl==1.17.1
+zipp==3.20.2
