--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Flask==3.0.3
 python-dotenv==1.0.1
 firebase-admin==6.6.0
-
+google-generativeai==0.8.3
+langchain-core==0.3.28
+langchain-google-genai==2.0.7
+langchain-community==0.3.13
+faiss-cpu==1.8.0.post1
