--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/chat.py", "use": "@vercel/python" },
-      { "src": "api/app.py", "use": "@vercel/python" }
+      {
+        "src": "api/index.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-      { "src": "/chat_api", "dest": "api/chat.py" },
-      { "src": "/chat", "dest": "api/chat.py" },
-      { "src": "/(.*)", "dest": "api/app.py" }
+      {
+        "src": "/(.*)",
+        "dest": "api/index.py"
+      }
     ]
   }
   
